--- a/src/Components/BeachSection/BeachSection.module.css
+++ b/src/Components/BeachSection/BeachSection.module.css
@@ -18,12 +18,18 @@
   position: relative;
   z-index: 1;
   padding: 20px;
-  color: #000;
-  top: 30%;
+  color: #554D32;
+  top: 20%;
   text-align: justify;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 
   & p {
     margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
   }
 }
 
