--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -21,13 +21,13 @@ nav {
     gap: 20px;
 
     & a {
-        color: #000;
+        color: #554D32;
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s;
 
         &:hover {
-            color: #1c4ccf;
+            color: #c49d1e;
         }
     }
 }
